# bpfimp

./: .gitignore  Cargo.toml  README.md  bpfimp.toml  bpfimp.toml.example  flake.nix  lefthook.yml  peers.toml
.github/workflows/: build.yml
bpfimp/: Cargo.toml  build.rs
bpfimp-common/: Cargo.toml
bpfimp-common/src/: lib.rs
bpfimp-ebpf/: Cargo.toml
bpfimp-ebpf/src/: main.rs
bpfimp/src/: main.rs
demo/: allow.toml  block.toml  demo.tape  unknown.toml
scripts/: gen_traffic.sh  run_bpfimp.sh  setup_netns.sh  teardown_netns.sh
